; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_ip_fw2_compat.c_ipfw_version_one_to_latest_32.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_ip_fw2_compat.c_ipfw_version_one_to_latest_32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockopt = type { i32 }
%struct.ip_fw = type { i32 }
%struct.ip_fw_compat_32 = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sockopt*, %struct.ip_fw*, %struct.ip_fw_compat_32*)* @ipfw_version_one_to_latest_32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ipfw_version_one_to_latest_32(%struct.sockopt* %0, %struct.ip_fw* %1, %struct.ip_fw_compat_32* %2) #0 {
  %4 = alloca %struct.sockopt*, align 8
  %5 = alloca %struct.ip_fw*, align 8
  %6 = alloca %struct.ip_fw_compat_32*, align 8
  %7 = alloca i32, align 4
  store %struct.sockopt* %0, %struct.sockopt** %4, align 8
  store %struct.ip_fw* %1, %struct.ip_fw** %5, align 8
  store %struct.ip_fw_compat_32* %2, %struct.ip_fw_compat_32** %6, align 8
  %8 = load %struct.sockopt*, %struct.sockopt** %4, align 8
  %9 = load %struct.ip_fw*, %struct.ip_fw** %5, align 8
  %10 = load %struct.ip_fw_compat_32*, %struct.ip_fw_compat_32** %6, align 8
  %11 = call i32 @ipfw_version_one_to_version_two_32(%struct.sockopt* %8, %struct.ip_fw* %9, %struct.ip_fw_compat_32* %10)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %7, align 4
  ret i32 %12
}

declare dso_local i32 @ipfw_version_one_to_version_two_32(%struct.sockopt*, %struct.ip_fw*, %struct.ip_fw_compat_32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
